kubernetes/vllm-serve/llama3.2-3b/vllm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: llama32-3b
  name: llama32-3b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llama32-3b
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: llama32-3b
    spec:
      containers:
      - args:
        - --model
        - meta-llama/Llama-3.2-3B-Instruct
        - --enable-auto-tool-choice
        - --chat-template
        - /app/tool_chat_template_llama3.2_json.jinja
        - --tool-call-parser
        - llama3_json
        - --port
        - "8000"
        image: vllm/vllm-openai:v0.7.3
        imagePullPolicy: Always
        name: llama32-3b
        ports:
        - containerPort: 8000
          protocol: TCP
        resources:
          limits:
            nvidia.com/gpu: "1"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /.cache
          name: hf-cache
        - mountPath: /.triton
          name: triton
        - mountPath: /app
          name: chat-template
        - mountPath: /.config
          name: config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: hf-cache
      - emptyDir: {}
        name: triton
      - configMap:
          defaultMode: 420
          name: llama32-3b-template
        name: chat-template
      - emptyDir: {}
        name: config
