kubernetes/vllm-serve/llama3.2-3b/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: llama32-3b
  labels:
    app: llama32-3b
spec:
  to:
    kind: Service
    name: llama32-3b
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
